--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,12 @@
-#clock {
-  font-family: serif;
-  font-size: 7em;
-  font-weight: bolder;
-  width: 250px;
-  color: black;
-  text-align: center;
-  border: 1px black;
-  border-radius: 1px;
-  margin: auto;
-  margin-top: 400px;
-  margin-left: 350px;
-  
+body {
+  background-color: #121212;
 }
-  
+
+#clock {
+  font-family: 'Orbitron', sans-serif;
+  color: #66ff99;
+  font-size: 56px;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
