--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,19 @@
 body {
-  background-color: #121212;
+  background-color: cadetblue
 }
 
 #clock {
-  font-family: 'Orbitron', sans-serif;
-  color: #66ff99;
-  font-size: 56px;
+  font-family: serif;
+  font-size: 4em;
+  font-weight: bolder;
+  width: 300px;
+  color: black;
   text-align: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  border: 1px black;
+  border-radius: 1px;
+  margin: auto;
+  margin-top: 400px;
+  margin-left: 300px;
+  
 }
+  
